--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -16,10 +16,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Check Node.js Installation
+      run: |
+        node -v
+        npm -v
+        which node
+        which npm
+
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '18'
+
+    - name: Verify Node.js Installation
+      run: |
+        node -v
+        npm -v
+        which node
+        which npm
 
     - name: Install dependencies
       run: yarn install
@@ -27,7 +41,7 @@ jobs:
     - name: Build project
       run: yarn build
 
-    - name: Set up Docker  Buildx
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to Gitea Docker Registry
