--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -13,6 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Curl
+      run: |
+        echo "Installing curl..."
+        apt-get update
+        apt-get install -y curl
+
     - name: Install Node.js Manually
       run: |
         echo "Installing Node.js..."
