--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -33,10 +33,10 @@ jobs:
         which npm
 
     - name: Install dependencies
-      run: yarn install
+      run: npm install
 
     - name: Build project
-      run: yarn build
+      run: npm run build
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
