--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -11,22 +11,18 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    container:
-      image: catthehacker/ubuntu:act-latest
-      options: --privileged
 
     steps:
-    - name: Set up Docker-in-Docker
-      uses: docker/setup-buildx-action@v2
-
     - name: Install Curl, Node.js, and Yarn
       run: |
-        apt-get update
-        apt-get install -y curl nodejs npm yarn
+        echo "Installing curl, Node.js, and Yarn..."
+        apk update
+        apk add curl
+        apk add nodejs npm
+        npm install -g yarn
         node -v
         npm -v
         yarn -v
-        docker -v
 
     - name: Checkout code
       uses: actions/checkout@v2
@@ -46,6 +42,9 @@ jobs:
     - name: Build project
       run: yarn build
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Log in to Gitea Docker Registry
       uses: docker/login-action@v2
       with:
@@ -57,7 +56,3 @@ jobs:
       run: |
         docker build -t git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest .
         docker push git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
-
-    - name: Verify Docker Daemon Connection
-      run: |
-        docker info
