--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -11,54 +11,32 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    container:
-      image: "ghcr.io/catthehacker/ubuntu:act-22.04"
-      options: --privileged
 
     steps:
-    - name: Set up Docker CLI
-      run: |
-        apt-get update
-        apt-get install -y docker.io
-
-    - name: Install Curl, Node.js, and Yarn
-      run: |
-        apt-get update
-        apt-get install -y curl nodejs npm yarn
-        node -v
-        npm -v
-        yarn -v
-        docker -v
-
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
-    - name: Verify Node.js and Yarn Installation
-      run: |
-        node -v
-        npm -v
-        yarn -v
-        which node
-        which npm
-        which yarn
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
-    - name: Install dependencies
-      run: yarn install
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Build project
-      run: yarn build
-
-    - name: Log in to Gitea Docker Registry
-      uses: docker/login-action@v2
+    - name: Login to Gitea Docker Registry
+      uses: docker/login-action@v3
       with:
         registry: git.dreamfriday.com
         username: ${{ secrets.GITEAUSER }}
         password: ${{ secrets.GITEAPASSWORD }}
 
     - name: Build and push Docker image
-      run: |
-        docker build -t git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest .
-        docker push git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        push: true
+        tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+        secrets: |
+          GIT_AUTH_TOKEN=${{ secrets.GITEAUSER_TOKEN }}
 
     - name: Verify Docker Daemon Connection
       run: |
