--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -13,38 +13,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Curl, Node.js, and Yarn
+      run: |
+        echo "Installing curl, Node.js, and Yarn..."
+        apk update
+        apk add curl
+        apk add nodejs npm
+        npm install -g yarn
+        node -v
+        npm -v
+        yarn -v
+
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
+
+    - name: Verify Node.js and Yarn Installation
+      run: |
+        node -v
+        npm -v
+        yarn -v
+        which node
+        which npm
+        which yarn
+
+    - name: Install dependencies
+      run: yarn install
+
+    - name: Build project
+      run: yarn build
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@v2
 
-    - name: Login to Gitea Docker Registry
-      uses: docker/login-action@v3
+    - name: Log in to Gitea Docker Registry
+      uses: docker/login-action@v2
       with:
         registry: git.dreamfriday.com
         username: ${{ secrets.GITEAUSER }}
         password: ${{ secrets.GITEAPASSWORD }}
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build project
-      run: npm run build
-
     - name: Build and push Docker image
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        push: true
-        tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
-        secrets: |
-          GIT_AUTH_TOKEN=${{ secrets.GITEAUSER_TOKEN }}
-
-    - name: Verify Docker Daemon Connection
-      run: docker info
+      run: |
+        docker build -t git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest .
+        docker push git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
