--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -1,58 +1,65 @@
-name: Build and Push Docker Image
+name: Build and Deploy Payload App
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+    paths:
+      - '**'
+      - '.gitea/workflows/build-deploy.yml'
+
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install Curl, Node.js, and Yarn
-      run: |
-        echo "Installing curl, Node.js, and Yarn..."
-        apk update
-        apk add curl
-        apk add nodejs npm
-        npm install -g yarn
-        node -v
-        npm -v
-        yarn -v
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
 
-    - name: Verify Node.js and Yarn Installation
-      run: |
-        node -v
-        npm -v
-        yarn -v
-        which node
-        which npm
-        which yarn
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install dependencies
-      run: yarn install
+      - name: Build project
+        run: npm run build
 
-    - name: Build project
-      run: yarn build
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Log in to Gitea Docker Registry
+        uses: docker/login-action@v3
+        with:
+          registry: git.dreamfriday.com
+          username: ${{ secrets.GITEAUSER }}
+          password: ${{ secrets.GITEAPASSWORD }}
 
-    - name: Log in to Gitea Docker Registry
-      uses: docker/login-action@v2
-      with:
-        registry: git.dreamfriday.com
-        username: ${{ secrets.GITEAUSER }}
-        password: ${{ secrets.GITEAPASSWORD }}
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+          file: ./Dockerfile
 
-    - name: Build and push Docker image
-      run: |
-        docker build -t git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest .
-        docker push git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Log in to Docker Registry
+        uses: docker/login-action@v3
+        with:
+          registry: git.dreamfriday.com
+          username: ${{ secrets.GITEAUSER }}
+          password: ${{ secrets.GITEAPASSWORD }}
+
+      - name: Deploy to container
+        run: |
+          docker pull git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+          # Add your deployment command here, e.g., docker run or kubectl apply
