--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -29,11 +29,6 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-
       - name: Log in to Gitea Docker Registry
         uses: docker/login-action@v3
         with:
@@ -42,12 +37,9 @@ jobs:
           password: ${{ secrets.GITEAPASSWORD }}
 
       - name: Build and push container image to registry
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
-          file: ./Dockerfile
+        run: |
+          docker build -t git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest .
+          docker push git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
 
   deploy:
     runs-on: ubuntu-latest
