--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - name: Check Docker status
         run: |
-          sudo service docker status
-          docker version
+          service docker status || docker info || echo "Docker not running"
+          docker version || echo "Docker not installed"
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,6 +33,11 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
 
       - name: Log in to Gitea Docker Registry
         id: login
