--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -31,9 +31,15 @@ jobs:
 
       - name: Ensure Docker is installed and running
         run: |
-          apt-get update && apt-get install -y docker.io
-          service docker start || systemctl start docker || /etc/init.d/docker start
-          usermod -aG docker $USER || echo "Adding user to docker group"
+          if command -v apt-get &> /dev/null; then
+            apt-get update && apt-get install -y docker.io
+            service docker start || echo "Docker already started"
+          elif command -v apk &> /dev/null; then
+            apk update && apk add docker
+            rc-update add docker boot
+            service docker start || echo "Docker already started"
+          fi
+          docker version || echo "Docker not installed properly"
 
       - name: Check Docker status
         run: |
