--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -39,9 +39,7 @@ jobs:
             rc-update add docker boot
             service docker start || echo "Docker already started"
           fi
-          usermod -aG docker $(whoami) || echo "Adding user to docker group"
-          newgrp docker
-          docker version || echo "Docker not installed properly"
+          docker info || echo "Docker not running properly"
 
       - name: Check Docker status
         run: |
