--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -29,6 +29,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Echo Gitea Username
+        run: echo "Logging in with username: ${{ secrets.GITEAUSER }}"
+
       - name: Log in to Gitea Docker Registry
         id: login
         uses: docker/login-action@v3
@@ -36,9 +39,6 @@ jobs:
           registry: git.dreamfriday.com
           username: ${{ secrets.GITEAUSER }}
           password: ${{ secrets.GITEAPASSWORD }}
-        run: |
-          echo "Logging in with username: ${{ secrets.GITEAUSER }}"
-          docker login git.dreamfriday.com -u ${{ secrets.GITEAUSER }} -p ${{ secrets.GITEAPASSWORD }}
 
       - name: Check login status
         if: steps.login.outcome != 'success'
