--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -18,30 +18,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Ensure Docker is installed and running
-        run: |
-          if command -v apt-get &> /dev/null; then
-            apt-get update && apt-get install -y docker.io
-            service docker start || echo "Docker already started"
-          elif command -v apk &> /dev/null; then
-            apk update && apk add docker
-            rc-update add docker boot
-            service docker start || echo "Docker already started"
-          fi
-          docker info || echo "Docker not running properly"
-
-      - name: Log in to Gitea Docker Registry
+      - name: Log in to Gitea Container Registry
         id: login
         uses: docker/login-action@v3
         with:
@@ -49,16 +29,8 @@ jobs:
           username: ${{ secrets.GITEAUSER }}
           password: ${{ secrets.GITEAPASSWORD }}
 
-      - name: Check login status
-        if: steps.login.outcome != 'success'
-        run: |
-          echo "Login to Gitea Docker Registry failed"
-          echo "Username: ${{ secrets.GITEAUSER }}"
-          echo "Registry: git.dreamfriday.com"
-          exit 1
-
       - name: Build and push container image to registry
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: true
