--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Gitea Container Registry
         id: login
@@ -29,10 +29,10 @@ jobs:
           username: ${{ secrets.GITEAUSER }}
           password: ${{ secrets.GITEAPASSWORD }}
 
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
-          file: ./Dockerfile
+      # - name: Build and push container image to registry
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+      #     file: ./Dockerfile
