--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -21,6 +21,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Ensure Docker is running
+        run: |
+          service docker start || true
+          docker info
+
       - name: Log in to Gitea Container Registry
         id: login
         uses: docker/login-action@v3
@@ -29,10 +34,10 @@ jobs:
           username: ${{ secrets.GITEAUSER }}
           password: ${{ secrets.GITEAPASSWORD }}
 
-      # - name: Build and push container image to registry
-      #   uses: docker/build-push-action@v6
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
-      #     file: ./Dockerfile
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+          file: ./Dockerfile
