--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -19,25 +19,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Ensure Docker is running
-        run: |
-          service docker start || true
-          docker info
+        uses: docker/setup-buildx-action@v1
 
       - name: Log in to Gitea Container Registry
         id: login
-        uses: docker/login-action@v3
+        uses: docker/login-action@v1
         with:
           registry: git.dreamfriday.com
           username: ${{ secrets.GITEAUSER }}
           password: ${{ secrets.GITEAPASSWORD }}
 
       - name: Build and push container image to registry
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v2
         with:
-          context: .
           push: true
           tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
           file: ./Dockerfile
+          context: ./
