--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -19,20 +19,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Gitea Container Registry
         id: login
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: git.dreamfriday.com
           username: ${{ secrets.GITEAUSER }}
           password: ${{ secrets.GITEAPASSWORD }}
 
       - name: Build and push container image to registry
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
           file: ./Dockerfile
-          context: ./
