--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -1,38 +1,88 @@
-name: Build and Push Docker Image
 
-on:
+
+
+name: Build and Push Image
+
+on: 
   push:
     branches:
       - main
-    paths:
-      - '**'
-      - '.gitea/workflows/build-deploy.yml'
-
-  workflow_dispatch:
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  build:
+    name: Build and push image
+    runs-on: self-hosted
+    container: catthehacker/ubuntu:act-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Create Kubeconfig
+      run: |
+        mkdir -p $HOME/.kube
+        echo "${{ secrets.KUBECONFIG_BUILDX }}" > $HOME/.kube/config        
 
-      - name: Log in to Gitea Container Registry
-        id: login
-        uses: docker/login-action@v3
-        with:
-          registry: git.dreamfriday.com
-          username: ${{ secrets.GITEAUSER }}
-          password: ${{ secrets.GITEAPASSWORD }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      with:
+        driver: kubernetes
+        driver-opts: |
+          namespace=act-runner
+          qemu.install=true          
 
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
-          file: ./Dockerfile
+    - name: Login to Docker Registry
+      uses: docker/login-action@v3
+      with:
+        registry: git.dreamfriday.com
+        username: ${{ secrets.GITEAUSER }}
+        password: ${{ secrets.GITEAPASSWORD }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        platforms: linux/amd64,linux/arm64
+        tags: |
+          git.dreamfriday.com/tobru/ioteer:latest
+
+
+
+# name: Build and Push Docker Image
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - '**'
+#       - '.gitea/workflows/build-deploy.yml'
+
+#   workflow_dispatch:
+
+# jobs:
+#   build-and-push:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v3
+
+#       - name: Log in to Gitea Container Registry
+#         id: login
+#         uses: docker/login-action@v3
+#         with:
+#           registry: git.dreamfriday.com
+#           username: ${{ secrets.GITEAUSER }}
+#           password: ${{ secrets.GITEAPASSWORD }}
+
+#       - name: Build and push container image to registry
+#         uses: docker/build-push-action@v6
+#         with:
+#           context: .
+#           push: true
+#           tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
+#           file: ./Dockerfile
