--- a/.gitea/workflows/build-and-push.yaml
+++ b/.gitea/workflows/build-and-push.yaml
@@ -1,6 +1,3 @@
-
-
-
 name: Build and Push Image
 
 on: 
@@ -45,44 +42,4 @@ jobs:
         push: true
         platforms: linux/amd64,linux/arm64
         tags: |
-          git.dreamfriday.com/tobru/ioteer:latest
-
-
-
-# name: Build and Push Docker Image
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths:
-#       - '**'
-#       - '.gitea/workflows/build-deploy.yml'
-
-#   workflow_dispatch:
-
-# jobs:
-#   build-and-push:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v3
-
-#       - name: Log in to Gitea Container Registry
-#         id: login
-#         uses: docker/login-action@v3
-#         with:
-#           registry: git.dreamfriday.com
-#           username: ${{ secrets.GITEAUSER }}
-#           password: ${{ secrets.GITEAPASSWORD }}
-
-#       - name: Build and push container image to registry
-#         uses: docker/build-push-action@v6
-#         with:
-#           context: .
-#           push: true
-#           tags: git.dreamfriday.com/${{ secrets.GITEAUSER }}/payload:latest
-#           file: ./Dockerfile
+          git.dreamfriday.com/payload:latest
